chore: Fix scroll on Firefox.

--- a/packages/map-template/src/components/Search/Categories/Categories.scss
+++ b/packages/map-template/src/components/Search/Categories/Categories.scss
@@ -18,6 +18,7 @@
         gap: var(--spacing-x-small);
         overflow: auto hidden;
         grid-auto-columns: min-content;
+        scrollbar-width: none;
     }
 
     &__scroll-button {
